assets/namespaces/application1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: application1
  labels:
    type: application
