assets/namespaces/application1/networkpolicy_ns-isolation.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-isolation
  namespace: application1
spec:
  egress:
  - to:
    - namespaceSelector: {}
    - podSelector: {}
    - ipBlock:
        cidr: 172.16.0.4/32
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
